Archive2/44/563e7137b884e7/output
main.cpp: In instantiation of 'void gen_func<Ps>::execute(Vars ...) [with Vars = {int, char}; Ps = {}]':
main.cpp:23:22:   required from here
main.cpp:12:15: error: no matching function for call to 'gen_func<>::f_decon(int&, char&, std::tuple<>&)'
        f_decon<Vars...>( vars... , parameters );
               ^
main.cpp:12:15: note: candidate is:
main.cpp:16:10: note: template<class ... Vars, class ... Ts> void gen_func<Ps>::f_decon(Vars ..., std::tuple<_Args2 ...>) [with Vars = {Vars ...}; Ts = {Ts ...}; Ps = {}]
     void f_decon( Vars... vars , tuple<Ts...> tup )
          ^
main.cpp:16:10: note:   template argument deduction/substitution failed:
main.cpp:12:15: note:   mismatched types 'std::tuple<_Elements ...>' and 'int'
        f_decon<Vars...>( vars... , parameters );
               ^
